# kata-containers

src/runtime-rs/crates/resource/src/network/: network_with_netns.rs
src/runtime-rs/crates/resource/src/network/endpoint/: endpoint_persist.rs  macvtap_endpoint.rs  mod.rs
src/runtime-rs/crates/resource/src/network/network_model/: macvtap_model.rs  mod.rs
src/runtime-rs/crates/runtimes/: Cargo.toml
src/runtime-rs/crates/runtimes/common/src/: sandbox.rs
src/runtime-rs/crates/runtimes/src/: lib.rs
src/runtime-rs/crates/runtimes/src/shim_mgmt/: client.rs  direct_volume.rs  handlers.rs  mod.rs
src/runtime-rs/crates/runtimes/virt_container/src/: sandbox.rs
src/tools/kata-ctl/: Cargo.toml
src/tools/kata-ctl/src/: args.rs  main.rs  ops.rs
src/tools/kata-ctl/src/ops/: check_ops.rs  volume_ops.rs  volume_shared.rs
